<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".About.AboutMe">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/acme"
                        android:gravity="center"
                        android:text="Developed by"
                        android:textColor="#B5DAF8"
                        android:textSize="22dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/white"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="0dp"
                        android:background="@color/white"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imageView"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_margin="20dp"
                        app:civ_border_color="@color/myYellow"
                        app:civ_border_width="2dp"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Vishal Anand"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="(Android Developer)"
                        android:textColor="@color/myGreen"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="10dp"
                tools:layout_editor_absoluteY="299dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:src="@drawable/linkedin"
                        tools:ignore="ImageContrastCheck" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:src="@drawable/github"
                        tools:ignore="ImageContrastCheck" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:src="@drawable/instagram"
                        tools:ignore="ImageContrastCheck" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="@string/dataProvided"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="3rd Party Library Used"
                        android:textColor="@color/myColor"
                        android:fontFamily="@font/acme"
                        android:textSize="20dp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/white"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="0dp"
                        android:background="@color/white"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/volleyH"
                            android:textColor="@color/white"
                            android:textSize="18dp"
                            android:textStyle="bold" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/volley"
                            android:textColor="@color/myYellow2" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/glideH"
                            android:textColor="@color/white"
                            android:textSize="18dp"
                            android:textStyle="bold" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/glide"
                            android:textColor="@color/myYellow2" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/circularImage"
                            android:textColor="@color/white"
                            android:textSize="18dp"
                            android:textStyle="bold" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/circularImageH"
                            android:textColor="@color/myYellow2" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="3dp"
                        android:background="@color/white"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </ScrollView>


</LinearLayout>